fix alignment issue

--- a/pyxiv/static/style.css
+++ b/pyxiv/static/style.css
@@ -31,6 +31,7 @@ header {
 header .navbar-container {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	width: 100%;
 }
 
